# WindTurbineExactBIE

./: CMakeLists.txt  contour_integration.h  functions.h  main.cpp  params.h
