project(GIU_Exact_cpp)
cmake_minimum_required(VERSION 2.8)
set (CMAKE_CXX_STANDARD 14)
aux_source_directory(. SRC_LIST)
find_package(GSL)
FILE(GLOB_RECURSE LibFiles "*.h")
add_custom_target(headers SOURCES ${LibFiles})
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries (${PROJECT_NAME} ${GSL_LIBRARIES})
